--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -1,169 +1,208 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c7a65502",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torchvision\n",
-    "import torchvision.transforms as transforms\n",
-    "import numpy as np\n",
-    "from torch.utils.data import Subset, random_split\n",
-    "\n",
-    "class FederatedDataBuilder:\n",
-    "    def __init__(self, root='./data', val_split_ratio=0.1, K=100):\n",
-    "        \"\"\"\n",
-    "        Initialize the data builder.\n",
-    "        :param root: Directory to download/store the dataset.\n",
-    "        :param val_split_ratio: Ratio of the validation set size to the training set size.\n",
-    "        :param K: Total number of clients (Source 59, 62 typically sets K=100).\n",
-    "        \"\"\"\n",
-    "        self.root = root\n",
-    "        self.K = K\n",
-    "        self.val_split_ratio = val_split_ratio\n",
-    "        \n",
-    "        # 1. Data Preprocessing\n",
-    "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
-    "        # Using standard CIFAR transforms here as a baseline.\n",
-    "        self.transform = transforms.Compose([\n",
-    "            transforms.ToTensor(),\n",
-    "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
-    "        ])\n",
-    "\n",
-    "        # 2. Load original CIFAR-100 training set\n",
-    "        # The project requires CIFAR-100.\n",
-    "        full_train_dataset = torchvision.datasets.CIFAR100(\n",
-    "            root=self.root, train=True, download=True, transform=self.transform\n",
-    "        )\n",
-    "        self.test_dataset = torchvision.datasets.CIFAR100(\n",
-    "            root=self.root, train=False, download=True, transform=self.transform\n",
-    "        )\n",
-    "\n",
-    "        # 3. Create Validation Split \n",
-    "        # CIFAR-100 does not have a validation split, so we must create one.\n",
-    "        val_size = int(len(full_train_dataset) * val_split_ratio) #val_size=5000\n",
-    "        train_size = len(full_train_dataset) - val_size  #train_size=45000\n",
-    "        \n",
-    "        # This 'train_dataset' will be used for subsequent FL client partitioning.\n",
-    "        # A fixed seed is used for reproducibility.\n",
-    "        self.train_dataset, self.val_dataset = random_split(\n",
-    "            full_train_dataset, [train_size, val_size], \n",
-    "            generator=torch.Generator().manual_seed(42) \n",
-    "        )\n",
-    "        \n",
-    "        # Extract targets/labels for the training subset to handle Non-IID logic.\n",
-    "        # Note: We need to map the subset indices back to the original dataset targets.\n",
-    "        self.train_indices = self.train_dataset.indices\n",
-    "        self.train_targets = np.array(full_train_dataset.targets)[self.train_indices]\n",
-    "\n",
-    "    def get_iid_partition(self):\n",
-    "        \"\"\"\n",
-    "        I.I.D. Sharding: Each client is given an approximately equal number of training\n",
-    "        samples uniformly distributed over the class labels .\n",
-    "        \"\"\"\n",
-    "        print(f\"Generating I.I.D. partition for {self.K} clients...\")\n",
-    "        num_items = int(len(self.train_dataset) / self.K)\n",
-    "        dict_users, all_idxs = {}, [i for i in range(len(self.train_dataset))]\n",
-    "        \n",
-    "        # Randomly shuffle all indices to ensure uniform distribution\n",
-    "        np.random.shuffle(all_idxs)\n",
-    "        \n",
-    "        for i in range(self.K):\n",
-    "            # Assign a slice of indices to each client\n",
-    "            dict_users[i] = set(all_idxs[i * num_items : (i + 1) * num_items])\n",
-    "        \n",
-    "        return dict_users\n",
-    "\n",
-    "    def get_non_iid_partition(self, Nc):\n",
-    "        \"\"\"\n",
-    "        Non-I.I.D. Sharding: Each client is given an approximately equal number of training\n",
-    "        samples, belonging to Nc classes .\n",
-    "        \n",
-    "        :param Nc: The number of classes per client (Controls heterogeneity).\n",
-    "        \"\"\"\n",
-    "        print(f\"Generating Non-I.I.D. partition for {self.K} clients with Nc={Nc}...\")\n",
-    "        \n",
-    "        # 1. Sort indices by label to group classes together\n",
-    "        idxs = np.arange(len(self.train_dataset))\n",
-    "        labels = self.train_targets\n",
-    "        \n",
-    "        # Stack indices and labels, then sort by labels\n",
-    "        idxs_labels = np.vstack((idxs, labels))\n",
-    "        idxs_labels = idxs_labels[:, idxs_labels[1, :].argsort()]\n",
-    "        idxs = idxs_labels[0, :] # Sorted indices\n",
-    "        labels = idxs_labels[1, :] # Sorted labels\n",
-    "\n",
-    "        # 2. Create Shards\n",
-    "        # To ensure each client gets exactly Nc classes (approximately), we divide the \n",
-    "        # sorted dataset into K * Nc shards.\n",
-    "        total_shards = self.K * Nc\n",
-    "        shard_size = int(len(self.train_dataset) / total_shards)\n",
-    "        \n",
-    "        # Split the sorted indices into shards\n",
-    "        idx_shard = [idxs[i*shard_size : (i+1)*shard_size] for i in range(total_shards)]\n",
-    "        \n",
-    "        # 3. Assign Shards to Clients \n",
-    "        # Clients must have disjoint sets of training samples.\n",
-    "        dict_users = {i: np.array([], dtype='int64') for i in range(self.K)}\n",
-    "        available_shards = list(range(total_shards))\n",
-    "        \n",
-    "        for i in range(self.K):\n",
-    "            # Assign Nc shards to each client\n",
-    "            shards_to_assign = []\n",
-    "            for _ in range(Nc):\n",
-    "                # Randomly select a shard and remove it from the pool (no replacement)\n",
-    "                # to ensure the data subsets are disjoint.\n",
-    "                shard_idx = np.random.choice(available_shards)\n",
-    "                shards_to_assign.append(shard_idx)\n",
-    "                available_shards.remove(shard_idx)\n",
-    "            \n",
-    "            # Concatenate the selected shards for this client\n",
-    "            for shard_idx in shards_to_assign:\n",
-    "                dict_users[i] = np.concatenate((dict_users[i], idx_shard[shard_idx]), axis=0)\n",
-    "                \n",
-    "        return dict_users\n",
-    "\n"
-   ]
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "id": "c7a65502",
+      "metadata": {
+        "id": "c7a65502"
+      },
+      "outputs": [],
+      "source": [
+        "import torch\n",
+        "import torchvision\n",
+        "import torchvision.transforms as transforms\n",
+        "import numpy as np\n",
+        "from torch.utils.data import Subset, random_split\n",
+        "\n",
+        "class FederatedDataBuilder:\n",
+        "    def __init__(self, root='./data', val_split_ratio=0.1, K=100):\n",
+        "        \"\"\"\n",
+        "        Initialize the data builder.\n",
+        "        :param root: Directory to download/store the dataset.\n",
+        "        :param val_split_ratio: Ratio of the validation set size to the training set size.\n",
+        "        :param K: Total number of clients (Source 59, 62 typically sets K=100).\n",
+        "        \"\"\"\n",
+        "        self.root = root\n",
+        "        self.K = K\n",
+        "        self.val_split_ratio = val_split_ratio\n",
+        "\n",
+        "        # 1. Data Preprocessing\n",
+        "        # Note: DINO ViT might require specific transforms (e.g., resize to 224x224) depending on memory.\n",
+        "        # Using standard CIFAR transforms here as a baseline.\n",
+        "        self.transform = transforms.Compose([\n",
+        "            transforms.ToTensor(),\n",
+        "            transforms.Normalize((0.5071, 0.4867, 0.4408), (0.2675, 0.2565, 0.2761))\n",
+        "        ])\n",
+        "\n",
+        "        # 2. Load original CIFAR-100 training set\n",
+        "        # The project requires CIFAR-100.\n",
+        "        full_train_dataset = torchvision.datasets.CIFAR100(\n",
+        "            root=self.root, train=True, download=True, transform=self.transform\n",
+        "        )\n",
+        "        self.test_dataset = torchvision.datasets.CIFAR100(\n",
+        "            root=self.root, train=False, download=True, transform=self.transform\n",
+        "        )\n",
+        "\n",
+        "        # 3. Create Validation Split\n",
+        "        # CIFAR-100 does not have a validation split, so we must create one.\n",
+        "        val_size = int(len(full_train_dataset) * val_split_ratio) #val_size=5000\n",
+        "        train_size = len(full_train_dataset) - val_size  #train_size=45000\n",
+        "\n",
+        "        # This 'train_dataset' will be used for subsequent FL client partitioning.\n",
+        "        # A fixed seed is used for reproducibility.\n",
+        "        self.train_dataset, self.val_dataset = random_split(\n",
+        "            full_train_dataset, [train_size, val_size],\n",
+        "            generator=torch.Generator().manual_seed(42)\n",
+        "        )\n",
+        "\n",
+        "        # Extract targets/labels for the training subset to handle Non-IID logic.\n",
+        "        # Note: We need to map the subset indices back to the original dataset targets.\n",
+        "        self.train_indices = self.train_dataset.indices\n",
+        "        self.train_targets = np.array(full_train_dataset.targets)[self.train_indices]\n",
+        "\n",
+        "    def get_iid_partition(self):\n",
+        "        \"\"\"\n",
+        "        I.I.D. Sharding: Each client is given an approximately equal number of training\n",
+        "        samples uniformly distributed over the class labels .\n",
+        "        \"\"\"\n",
+        "        print(f\"Generating I.I.D. partition for {self.K} clients...\")\n",
+        "        num_items = int(len(self.train_dataset) / self.K)\n",
+        "        dict_users, all_idxs = {}, [i for i in range(len(self.train_dataset))]\n",
+        "\n",
+        "        # Randomly shuffle all indices to ensure uniform distribution\n",
+        "        np.random.shuffle(all_idxs)\n",
+        "\n",
+        "        for i in range(self.K):\n",
+        "            # Assign a slice of indices to each client\n",
+        "            dict_users[i] = set(all_idxs[i * num_items : (i + 1) * num_items])\n",
+        "\n",
+        "        return dict_users\n",
+        "\n",
+        "    def get_non_iid_partition(self, Nc):\n",
+        "        \"\"\"\n",
+        "        Non-I.I.D. Sharding: Each client is given an approximately equal number of training\n",
+        "        samples, belonging to Nc classes .\n",
+        "\n",
+        "        :param Nc: The number of classes per client (Controls heterogeneity).\n",
+        "        \"\"\"\n",
+        "        print(f\"Generating Non-I.I.D. partition for {self.K} clients with Nc={Nc}...\")\n",
+        "\n",
+        "        # 1. Sort indices by label to group classes together\n",
+        "        idxs = np.arange(len(self.train_dataset))\n",
+        "        labels = self.train_targets\n",
+        "\n",
+        "        # Stack indices and labels, then sort by labels\n",
+        "        idxs_labels = np.vstack((idxs, labels))\n",
+        "        idxs_labels = idxs_labels[:, idxs_labels[1, :].argsort()]\n",
+        "        idxs = idxs_labels[0, :] # Sorted indices\n",
+        "        labels = idxs_labels[1, :] # Sorted labels\n",
+        "\n",
+        "        # 2. Create Shards\n",
+        "        # To ensure each client gets exactly Nc classes (approximately), we divide the\n",
+        "        # sorted dataset into K * Nc shards.\n",
+        "        total_shards = self.K * Nc\n",
+        "        shard_size = int(len(self.train_dataset) / total_shards)\n",
+        "\n",
+        "        # Split the sorted indices into shards\n",
+        "        idx_shard = [idxs[i*shard_size : (i+1)*shard_size] for i in range(total_shards)]\n",
+        "\n",
+        "        # 3. Assign Shards to Clients\n",
+        "        # Clients must have disjoint sets of training samples.\n",
+        "        dict_users = {i: np.array([], dtype='int64') for i in range(self.K)}\n",
+        "        available_shards = list(range(total_shards))\n",
+        "\n",
+        "        for i in range(self.K):\n",
+        "            # Assign Nc shards to each client\n",
+        "            shards_to_assign = []\n",
+        "            for _ in range(Nc):\n",
+        "                # Randomly select a shard and remove it from the pool (no replacement)\n",
+        "                # to ensure the data subsets are disjoint.\n",
+        "                shard_idx = np.random.choice(available_shards)\n",
+        "                shards_to_assign.append(shard_idx)\n",
+        "                available_shards.remove(shard_idx)\n",
+        "\n",
+        "            # Concatenate the selected shards for this client\n",
+        "            for shard_idx in shards_to_assign:\n",
+        "                dict_users[i] = np.concatenate((dict_users[i], idx_shard[shard_idx]), axis=0)\n",
+        "\n",
+        "        return dict_users\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # 1. Initialize Builder\n",
+        "    # Note: First run will download CIFAR-100 to ./data\n",
+        "    builder = FederatedDataBuilder(val_split_ratio=0.1, K=100)\n",
+        "\n",
+        "    # 2. Get I.I.D. partition\n",
+        "    iid_dict = builder.get_iid_partition()\n",
+        "    print(f\"Client 0 IID sample count: {len(iid_dict[0])}\")\n",
+        "\n",
+        "    # 3. Get Non-I.I.D. partition (e.g., Nc=5)\n",
+        "    # You need to test with Nc={1, 5, 10, 50}\n",
+        "    non_iid_dict = builder.get_non_iid_partition(Nc=5)\n",
+        "    print(f\"Client 0 Non-IID sample count: {len(non_iid_dict[0])}\")\n",
+        "\n",
+        "    # 4. Verification\n",
+        "    # Check if Client 0 actually has samples from approximately Nc classes\n",
+        "    client_0_indices = list(non_iid_dict[0])\n",
+        "    c0_labels = builder.train_targets[client_0_indices]\n",
+        "    unique_labels = np.unique(c0_labels)\n",
+        "\n",
+        "    print(f\"Client 0 has labels: {unique_labels}\")\n",
+        "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
+      ],
+      "metadata": {
+        "id": "TNKNYMJVM8yM",
+        "outputId": "dd2c8e65-6d6e-497f-cc88-0b77b74d5d4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "TNKNYMJVM8yM",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 169M/169M [00:04<00:00, 35.0MB/s]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Generating I.I.D. partition for 100 clients...\n",
+            "Client 0 IID sample count: 450\n",
+            "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
+            "Client 0 Non-IID sample count: 450\n",
+            "Client 0 has labels: [ 9 11 52 79 96]\n",
+            "Number of unique classes for Client 0: 5\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "gpuType": "T4"
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "accelerator": "GPU"
   },
-  {
-   "cell_type": "markdown",
-   "id": "556d2f69",
-   "metadata": {},
-   "source": [
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # 1. Initialize Builder\n",
-    "    # Note: First run will download CIFAR-100 to ./data\n",
-    "    builder = FederatedDataBuilder(val_split_ratio=0.1, K=100)\n",
-    "    \n",
-    "    # 2. Get I.I.D. partition\n",
-    "    iid_dict = builder.get_iid_partition()\n",
-    "    print(f\"Client 0 IID sample count: {len(iid_dict[0])}\")\n",
-    "    \n",
-    "    # 3. Get Non-I.I.D. partition (e.g., Nc=5)\n",
-    "    # You need to test with Nc={1, 5, 10, 50}\n",
-    "    non_iid_dict = builder.get_non_iid_partition(Nc=5)\n",
-    "    print(f\"Client 0 Non-IID sample count: {len(non_iid_dict[0])}\")\n",
-    "    \n",
-    "    # 4. Verification\n",
-    "    # Check if Client 0 actually has samples from approximately Nc classes\n",
-    "    client_0_indices = list(non_iid_dict[0])\n",
-    "    c0_labels = builder.train_targets[client_0_indices]\n",
-    "    unique_labels = np.unique(c0_labels)\n",
-    "    \n",
-    "    print(f\"Client 0 has labels: {unique_labels}\")\n",
-    "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
