--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -132,6 +132,36 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "id": "TNKNYMJVM8yM",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TNKNYMJVM8yM",
+        "outputId": "dd2c8e65-6d6e-497f-cc88-0b77b74d5d4e"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 169M/169M [00:04<00:00, 35.0MB/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Generating I.I.D. partition for 100 clients...\n",
+            "Client 0 IID sample count: 450\n",
+            "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
+            "Client 0 Non-IID sample count: 450\n",
+            "Client 0 has labels: [ 9 11 52 79 96]\n",
+            "Number of unique classes for Client 0: 5\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "if __name__ == \"__main__\":\n",
@@ -156,52 +186,32 @@
         "\n",
         "    print(f\"Client 0 has labels: {unique_labels}\")\n",
         "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
-      ],
-      "metadata": {
-        "id": "TNKNYMJVM8yM",
-        "outputId": "dd2c8e65-6d6e-497f-cc88-0b77b74d5d4e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "TNKNYMJVM8yM",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 169M/169M [00:04<00:00, 35.0MB/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Generating I.I.D. partition for 100 clients...\n",
-            "Client 0 IID sample count: 450\n",
-            "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
-            "Client 0 Non-IID sample count: 450\n",
-            "Client 0 has labels: [ 9 11 52 79 96]\n",
-            "Number of unique classes for Client 0: 5\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "80bb6a6a",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%writefile preprocessing.py"
       ]
     }
   ],
   "metadata": {
-    "language_info": {
-      "name": "python"
-    },
+    "accelerator": "GPU",
     "colab": {
-      "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "provenance": []
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
-    "accelerator": "GPU"
+    "language_info": {
+      "name": "python"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
