update import proprecessing

--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -3,6 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "825e3347",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from preprocessing import FederatedDataBuilder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0f172bdc",
    "metadata": {
     "vscode": {
