save dataproprecessing.ipynb into py file

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -1,8 +1,18 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ILoveCoder999/FederatedLearning/blob/master/dataPreprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "id": "c7a65502",
       "metadata": {
         "id": "c7a65502"
@@ -132,33 +142,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "id": "TNKNYMJVM8yM",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TNKNYMJVM8yM",
-        "outputId": "dd2c8e65-6d6e-497f-cc88-0b77b74d5d4e"
+        "outputId": "06b115f4-2879-4325-9f6b-a8c0dbb17a96"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
-          "text": [
-            "100%|██████████| 169M/169M [00:04<00:00, 35.0MB/s]\n"
-          ]
-        },
-        {
           "name": "stdout",
-          "output_type": "stream",
           "text": [
             "Generating I.I.D. partition for 100 clients...\n",
             "Client 0 IID sample count: 450\n",
             "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
             "Client 0 Non-IID sample count: 450\n",
-            "Client 0 has labels: [ 9 11 52 79 96]\n",
-            "Number of unique classes for Client 0: 5\n"
+            "Client 0 has labels: [14 31 46 62 63 83 84]\n",
+            "Number of unique classes for Client 0: 7\n"
           ]
         }
       ],
@@ -190,10 +193,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "80bb6a6a",
-      "metadata": {},
-      "outputs": [],
+      "metadata": {
+        "id": "80bb6a6a",
+        "outputId": "6d7671a4-050d-4359-f329-43b9fa29b4bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing preprocessing.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile preprocessing.py"
       ]
@@ -203,7 +220,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
