--- a/centralizedModel.ipynb
+++ b/centralizedModel.ipynb
@@ -11,6 +11,13 @@
    },
    "outputs": [],
    "source": [
+    "# mount Google Drive\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
+    "\n",
+    "# import module\n",
+    "import sys\n",
+    "sys.path.append('/content/drive/MyDrive')\n",
     "from preprocessing import FederatedDataBuilder"
    ]
   },
