--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -195,7 +195,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "%%writefile preprocessing.py"
+        "%%writefile /content/drive/MyDrive/preprocessing.py"
       ]
     }
   ],
