使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -12,13 +12,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "NvJBelYjXwt7"
+      },
+      "id": "NvJBelYjXwt7",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "c7a65502",
       "metadata": {
         "id": "c7a65502"
       },
       "outputs": [],
       "source": [
+        "%%writefile /content/drive/MyDrive/preprocessing.py\n",
         "import torch\n",
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
@@ -142,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "TNKNYMJVM8yM",
       "metadata": {
         "colab": {
@@ -189,30 +203,6 @@
         "\n",
         "    print(f\"Client 0 has labels: {unique_labels}\")\n",
         "    print(f\"Number of unique classes for Client 0: {len(unique_labels)}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 5,
-      "id": "80bb6a6a",
-      "metadata": {
-        "id": "80bb6a6a",
-        "outputId": "6d7671a4-050d-4359-f329-43b9fa29b4bf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing preprocessing.py\n"
-          ]
-        }
-      ],
-      "source": [
-        "%%writefile /content/drive/MyDrive/preprocessing.py"
       ]
     }
   ],
