使用 Colab 创建而成

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -17,20 +17,44 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "NvJBelYjXwt7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NvJBelYjXwt7",
+        "outputId": "d86011b4-dadb-414a-89ed-7b693cf0923e"
       },
       "id": "NvJBelYjXwt7",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "c7a65502",
       "metadata": {
-        "id": "c7a65502"
+        "id": "c7a65502",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "25358c55-a63c-4b65-bd8d-8e66908b8e71"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting /content/drive/MyDrive/preprocessing.py\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile /content/drive/MyDrive/preprocessing.py\n",
         "import torch\n",
@@ -156,26 +180,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "TNKNYMJVM8yM",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 215
         },
         "id": "TNKNYMJVM8yM",
-        "outputId": "06b115f4-2879-4325-9f6b-a8c0dbb17a96"
+        "outputId": "b9ecce9b-7d7f-4304-f9cb-511f5518e96e"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Generating I.I.D. partition for 100 clients...\n",
-            "Client 0 IID sample count: 450\n",
-            "Generating Non-I.I.D. partition for 100 clients with Nc=5...\n",
-            "Client 0 Non-IID sample count: 450\n",
-            "Client 0 has labels: [14 31 46 62 63 83 84]\n",
-            "Number of unique classes for Client 0: 7\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'FederatedDataBuilder' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-1578188342.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;31m# 1. Initialize Builder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# Note: First run will download CIFAR-100 to ./data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mbuilder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFederatedDataBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_split_ratio\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# 2. Get I.I.D. partition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'FederatedDataBuilder' is not defined"
           ]
         }
       ],
